changes to input and button properties || added label for input || added div for weather report data and vibe change based on weather

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,16 @@ div#weatherReport {
     height: 100%;
 }
 
+div#showWeather {
+    height: 25vh;
+    margin: .5em;
+    padding: 10px;
+    border: 2px solid black;
+}
+
+div#backGroundVibe {
+    height: 25vh;
+    margin: .5em;
+    padding: 10px;
+    border: 2px solid black;
+}
