--- a/src/styles.css
+++ b/src/styles.css
@@ -15,18 +15,21 @@ body{
 }
 table{
     width: 100%;
-    background: green;
+    height: 25vh;
+    margin: .5em;
+    padding: 10px;    
 }
 tbody {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     font-size: smaller;
-    grid-template-columns: 1fr 1fr;
+    padding: 10px;
+    gap: 1em;
 }
 #container{
-    background: lightblue;
+    background: pink;
     width: 500px;
-    height: 75vh;
-    border: 2px solid darkblue;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,34 +37,31 @@ tbody {
 }
 
 div#searchBar {
-    background-color: red;
     padding: 15px;
-    border: 5px solid orange;
+    display: flex;
+    justify-content: center;
+    
 }
 
 div#weatherReport {
-    background: pink;
     margin-top: 2em;
-    border: 5px solid green;
     width: 100%;
     height: 100%;
 }
 
 div#showWeather {
-    height: 25vh;
-    margin: .5em;
-    padding: 10px;
-    border: 2px solid black;
+    display: flex;
+    justify-content: center;
 }
 
 div#backGroundVibe {
     height: 25vh;
     margin: .5em;
     padding: 10px;
-    border: 2px solid black;
 }
-#headerRow, #dataRow {
+
+.rows {
     display: flex;
-    flex-direction: column;
-    
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
